[gd_scene load_steps=2 format=3 uid="uid://ddtpshcub0l6n"]

[ext_resource type="Script" path="res://Scripts/JoinServer.gd" id="1_j35sg"]

[node name="JoinServer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j35sg")

[node name="BtnBack" type="Button" parent="."]
custom_minimum_size = Vector2(100, 80)
layout_mode = 1
offset_left = 10.0
offset_top = 10.0
offset_right = 110.0
offset_bottom = 90.0
theme_override_font_sizes/font_size = 30
text = "Back"

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -208.0
offset_top = 20.0
offset_right = 208.0
offset_bottom = 130.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 80
text = "Join Server"
horizontal_alignment = 1

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -640.0
offset_top = 180.0
offset_right = 640.0
offset_bottom = 780.0
grow_horizontal = 2
tab_alignment = 1
current_tab = 0

[node name="IP Address" type="Control" parent="TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="Controls" type="VBoxContainer" parent="TabContainer/IP Address"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -50.5
offset_right = 180.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50
alignment = 1

[node name="IPContainer" type="HBoxContainer" parent="TabContainer/IP Address/Controls"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="TabContainer/IP Address/Controls/IPContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "IP Address:"
horizontal_alignment = 2

[node name="LineEdit_IP" type="LineEdit" parent="TabContainer/IP Address/Controls/IPContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 30
alignment = 1

[node name="PortContainer" type="HBoxContainer" parent="TabContainer/IP Address/Controls"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="TabContainer/IP Address/Controls/PortContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Port Number:"
horizontal_alignment = 2

[node name="LineEdit_Port" type="LineEdit" parent="TabContainer/IP Address/Controls/PortContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 30
alignment = 1

[node name="BtnJoinIP" type="Button" parent="TabContainer/IP Address/Controls"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Join"

[node name="Server Browser (LAN)" type="Control" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Server Browser (LAN)"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BrowserItemContainer" type="VBoxContainer" parent="TabContainer/Server Browser (LAN)/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BtnRefresh" type="Button" parent="."]
custom_minimum_size = Vector2(100, 80)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -59.5
offset_top = -110.0
offset_right = 59.5
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 30
text = "Refresh"

[connection signal="pressed" from="BtnBack" to="." method="_on_btn_back_pressed"]
[connection signal="pressed" from="TabContainer/IP Address/Controls/BtnJoinIP" to="." method="_on_btn_join_ip_pressed"]
[connection signal="pressed" from="BtnRefresh" to="." method="_on_btn_refresh_pressed"]
